# libcutter

./: .gitignore  CMakeLists.txt  LibCutterPlugin.cpp  LibCutterPlugin.h  Makefile  README  README.md  Toolchain.mingw32  bcpp.sh  btea.c  btea.h  build-win32.sh  device.cpp  device.hpp  device_c.cpp  device_c.hpp  device_cv_sim.cpp  device_cv_sim.hpp  jsdrive.cpp  jsdrive_cv.cpp  serial_port.cpp  serial_port.hpp  stdafx.cpp  test_serial.cpp  test_serial.hpp  types.h
.github/workflows/: cmake.yml
Mac/LibCutterPlugin.xcodeproj/: project.pbxproj
Mac/LibCutterPlugin.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Windows/: LibCutterPlugin.sln  libLibCutter.xml
Windows/LibCutterPlugin/: LibCutterPlugin.vcxproj  LibCutterPlugin.vcxproj.filters
include/: btea.h  device.hpp  device_c.hpp  device_cv_sim.hpp  device_sim.hpp  serial_port.hpp  types.h
include/pub/: keys.h
lib/: CMakeLists.txt  btea.c  cutter.i  device.cpp  device_c.cpp  device_cv_sim.cpp  device_sim.cpp  serial_port.cpp  serial_port_win32.cpp
util/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.hpp  KeyConfigParser.cpp  KeyConfigParser.hpp  cricut-logo.py  cutter-logo.py  draw_gcode.cpp  draw_gcode_cv.cpp  draw_svg.cpp  draw_svg_cv.cpp  enumerate.cpp  gcode.cpp  gcode.hpp  gcode_common.h  interpreter.cpp  interpreter_cv.cpp  jsdrive.cpp  jsdrive_cv.cpp  jsdrive_relative.cpp  svg.cpp  svg.hpp  test_btea.cpp  test_endian.cpp  test_serial.cpp  test_serial.hpp  test_speed.cpp
util/gcode_tests/: pololu.gcode  test-cut-001.ngc  test-cut-002.ngc  test-cut-003.ngc  test-cut-004.ngc  test-cut-005.ngc  test-cut-006.ngc  test-cut-007.ngc  test-cut-008.ngc  test-cut-009.ngc  test-cut-010.ngc  test-cut-011.ngc  test-cut-012.ngc
